--- a/index.html
+++ b/index.html
@@ -75,6 +75,56 @@
             border-radius: 10px;
         }
 
+        .container {
+            display: flex;
+        }
+
+        .content-container {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            justify-content: center;
+            padding: 20px;
+            border-radius: 10px;
+            background-color: #5B5B5B;
+            margin: 0 auto;
+        }
+
+        .right-panel {
+            background-color: #5B5B5B;
+            color: #FFFFFF;
+            border-radius: 10px;
+            margin: 10px;
+            text-align: center;
+            height: 60vh;
+            float: right;
+        }
+
+        .left-panel {
+            background-color: #5B5B5B;
+            color: #FFFFFF;
+            border-radius: 10px;
+            margin: 10px;
+            text-align: center;
+            height: 60vh;
+            float: left;
+        }
+        
+
+        .box {
+            background-color: #5B5B5B;
+            color: #FFFFFF;
+            padding: 20px;
+            border-radius: 10px;
+            margin: 10px;
+            text-align: center;
+            height: 60vh;
+            max-width: 782px;
+            min-width: 782px;
+            max-height: 752px;
+            min-height: 752px;
+        }
+
         a {
             background-color: #5B5B5B;
             color: #FFFFFF;
@@ -116,6 +166,13 @@
                     </ul>
                 </div>
             </div>
+    </div>
+    <div class="panel">
+        <div class="left-panel" style="width: 50%; float: left;">
+            <div>meow</div>
+        </div>
+        <div class="right-panel" style="width: 50%; float: right;">
+            <div class="content-container" style="background-color: #5B5B5B; min-width: 100px; min-height: 100px; border-radius: 10px;"></div>
         </div>
     </div>
 </body>
